--- a/src/styles/BeerList.css
+++ b/src/styles/BeerList.css
@@ -1,5 +1,17 @@
+h2, h4, p {
+    text-align:center;
+}
+
+.siteWrapper {
+    width:100%;
+}
+
 ul {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     list-style-type: none;
     margin-block-start: 0em;
     margin-block-end: 0em;
@@ -9,22 +21,26 @@ ul {
 }
 
 img {
-  width: 50px;
-  height: auto;
+  height: 90%;
   padding: 20px;
 }
 
 li {
+  height:150px;
   display:flex;
   justify-content: space-around;
   align-items: center;
   margin: 10px;
-    background-color:rgb(216, 216, 216);
+  background-color:rgb(214, 214, 214);
 }
 
 li p {
-    background-color:rgb(233, 233, 233);
-    padding:10px;
+    background-color:rgb(226, 226, 226);
+    font-family: 'Courier New', Courier, monospace;
+    font-weight:600;
+    font-size:30px;
+    padding:0 2px;
+    margin:2px 10px 2px 10px;
 }
 
 .flexColumn {
